--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.1",
+    "axios": "^1.7.9",
     "face-api.js": "^0.22.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-webcam": "^7.2.0",
     "tailwindcss": "^4.0.1"
   },
   "devDependencies": {
